# hackathon-roulette

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  Makefile.ci  Makefile.dev  README.md  SPECS.md  app.py  pyproject.toml
src/hackathon_roulette/: main.py
